// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App snapshots > completed tool-call card (bash → 3 files) 1`] = `
" ◈ jellyclaw · claude-sonnet-4 · sess-abc · 0 tok · ·
────────────────────────────────────────────────────────────────────────────────────────────────────
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ tool: bash ✓                                                                                     │
│ {"command":"ls /tmp"}                                                                            │
│ → a.txt                                                                                          │
│ b.txt                                                                                            │
│ c.txt                                                                                            │
│ — 12ms                                                                                           │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────────────────────────
 › send a message"
`;

exports[`App snapshots > errored tool-call card 1`] = `
" ◈ jellyclaw · claude-sonnet-4 · sess-abc · 0 tok · ·
────────────────────────────────────────────────────────────────────────────────────────────────────
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ tool: bash ✗                                                                                     │
│ {"command":"false"}                                                                              │
│ → EXIT_NONZERO: command failed (exit 1)                                                          │
│ — 8ms                                                                                            │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────────────────────────
 › send a message"
`;

exports[`App snapshots > pending tool-call card 1`] = `
" ◈ jellyclaw · claude-sonnet-4 · sess-abc · 0 tok · (◉)⠇
────────────────────────────────────────────────────────────────────────────────────────────────────
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ tool: read ⠋                                                                                     │
│ {"path":"/tmp/foo.txt"}                                                                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────────────────────────
 › (streaming…)"
`;

exports[`App snapshots > permission modal overlay 1`] = `
" ◈ jellyclaw · claude-sonnet-4 · sess-abc · 0 tok · !
────────────────────────────────────────────────────────────────────────────────────────────────────
╔══════════════════════════════════════════════════════════════════════════════════════════════════╗
║ Permission requested                                                                             ║
║ tool: bash                                                                                       ║
║ reason: execute shell command                                                                    ║
║ input: {"command":"rm -rf /tmp/scratch"}                                                         ║
║ [Y]es [N]o                                                                                       ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
────────────────────────────────────────────────────────────────────────────────────────────────────
 › (streaming…)"
`;

exports[`App snapshots > reduced-motion: spinner shows static frame 1`] = `
" ◈ jellyclaw · claude-sonnet-4 · sess-abc · 0 tok · (◉)⠇
────────────────────────────────────────────────────────────────────────────────────────────────────
────────────────────────────────────────────────────────────────────────────────────────────────────
 › (streaming…)"
`;

exports[`App snapshots > streaming assistant message mid-stream 1`] = `
" ◈ jellyclaw · claude-sonnet-4 · sess-abc · 0 tok · (◉)⠇
────────────────────────────────────────────────────────────────────────────────────────────────────
user › say pong
◈ po
────────────────────────────────────────────────────────────────────────────────────────────────────
 › (streaming…)"
`;

exports[`App snapshots > welcome (idle, empty transcript) 1`] = `
" ◈ jellyclaw · claude-sonnet-4 · — · 0 tok · ·
────────────────────────────────────────────────────────────────────────────────────────────────────
────────────────────────────────────────────────────────────────────────────────────────────────────
 › type a prompt to start"
`;
